# Pasar

./: .gitignore  BREWFILE_ERROR_HANDLING.md  Justfile  LICENSE  README.md  ROADMAP.md  agents.md  app_log.txt  dev.hanthor.Pasar.json  dev.jamesq.Pasar.json  meson.build  pyproject.toml  run.sh  test_app.py  test_assets.py  test_variant.py
.github/workflows/: flatpak.yml
data/: dev.hanthor.Pasar.desktop.in  dev.hanthor.Pasar.gschema.xml  dev.hanthor.Pasar.metainfo.xml.in  dev.hanthor.Pasar.search-provider.ini.in  dev.hanthor.Pasar.service.in  dev.jamesq.Pasar.desktop.in  dev.jamesq.Pasar.gschema.xml  dev.jamesq.Pasar.metainfo.xml.in  dev.jamesq.Pasar.search-provider.ini.in  dev.jamesq.Pasar.service.in  meson.build
po/: POTFILES.in  meson.build  pasar.pot
skills/: README.md  build.md  features.md  profiling.md
src/: application.py  backend.py  brewfile-dialog.blp  brewfile-page.blp  brewfile_dialog.py  brewfile_page.py  browse-page.blp  browse_page.py  git_forge.py  global_progress.py  installed-page.blp  installed_page.py  logging_util.py  main.py  meson.build  package-details.blp  package-rich-tile.blp  package-tile.blp  package_details.py  package_rich_tile.py  package_tile.py  pasar.gresource.xml  pasar.in  screenshot_lightbox.py  search-page.blp  search_page.py  search_provider.py  stats-dialog.blp  stats_dialog.py  style.css  task-panel.blp  task_manager.py  task_panel.py  updates_card.py  version_history_dialog.py  window.blp  window.py
tests/: conftest.py  test_backend.py  test_benchmarks.py  test_logging_util.py  test_search_provider.py  test_task_manager.py
